--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,37 +12,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-12 Thu 20:42]
+#+CAPTION: Clock summary at [2017-01-12 Thu 21:15]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *68:17* |       |      | 100.0 |
+| *Total time*                                                                | *68:49* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 68:17   |       |      | 100.0 |
-| Active                                                                      |         | 68:17 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   0.9 |
+| Stories                                                                     | 68:49   |       |      | 100.0 |
+| Active                                                                      |         | 68:49 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   0.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.4 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.0 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  12.7 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   4.9 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  12.6 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.6 |
 | COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.6 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |   9.7 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |   9.6 |
 | COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.2 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   4.8 |
-| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   8.5 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   4.7 |
+| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   8.4 |
 | COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   1.8 |
-| CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   0.9 |
+| CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   0.8 |
 | COMPLETED Fix assorted windows warnings                                     |         |       | 0:19 |   0.5 |
-| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  11.0 |
+| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  10.9 |
 | COMPLETED Fix borked windows build                                          |         |       | 1:54 |   2.8 |
-| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.1 |
+| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.0 |
 | COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.5 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       | 0:21 |   0.5 |
 | COMPLETED Add appveyor support for bintray                                  |         |       | 2:23 |   3.5 |
-| STARTED Add upsilon support                                                 |         |       | 7:07 |  10.4 |
+| STARTED Add upsilon support                                                 |         |       | 7:39 |  11.1 |
 | STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   1.7 |
-| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.1 |
-| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   1.9 |
+| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.0 |
+| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   1.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -916,6 +916,7 @@ Errors:
 : Uploading "dogen-0.95.0-Windows-AMD64.msi" to BinTray as domaindrivenconsulting/Dogen/Dogen/0.94.0/dogen-0.95.0-Windows-AMD64.msi...Error uploading artifact to BinTray (401 status): This resource requires authentication
 
 *** STARTED Add upsilon support                                       :story:
+    CLOCK: [2017-01-12 Thu 20:43]--[2017-01-12 Thu 21:15] =>  0:32
     CLOCK: [2017-01-12 Thu 20:20]--[2017-01-12 Thu 20:42] =>  0:22
     CLOCK: [2017-01-12 Thu 14:49]--[2017-01-12 Thu 15:51] =>  1:02
     CLOCK: [2017-01-12 Thu 14:44]--[2017-01-12 Thu 14:48] =>  0:04
