--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,36 +12,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-12 Thu 22:00]
+#+CAPTION: Clock summary at [2017-01-12 Thu 22:49]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *69:32* |       |      | 100.0 |
+| *Total time*                                                                | *70:21* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 69:32   |       |      | 100.0 |
-| Active                                                                      |         | 69:32 |      | 100.0 |
+| Stories                                                                     | 70:21   |       |      | 100.0 |
+| Active                                                                      |         | 70:21 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   0.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.4 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   4.9 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  12.5 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   4.8 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  12.3 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.6 |
-| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.6 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |   9.5 |
-| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.2 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   4.7 |
-| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   8.3 |
+| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.5 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |   9.4 |
+| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.1 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   4.6 |
+| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   8.2 |
 | COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   1.7 |
 | CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   0.8 |
 | COMPLETED Fix assorted windows warnings                                     |         |       | 0:19 |   0.5 |
-| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  10.8 |
+| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  10.7 |
 | COMPLETED Fix borked windows build                                          |         |       | 1:54 |   2.7 |
-| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.0 |
-| COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.5 |
+| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   4.9 |
+| COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.4 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       | 0:21 |   0.5 |
 | COMPLETED Add appveyor support for bintray                                  |         |       | 2:23 |   3.4 |
-| STARTED Add upsilon support                                                 |         |       | 8:22 |  12.0 |
+| STARTED Add upsilon support                                                 |         |       | 9:11 |  13.1 |
 | STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   1.7 |
-| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.0 |
+| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   6.9 |
 | STARTED Add support for generic container types to C#                       |         |       | 1:16 |   1.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -916,6 +916,7 @@ Errors:
 : Uploading "dogen-0.95.0-Windows-AMD64.msi" to BinTray as domaindrivenconsulting/Dogen/Dogen/0.94.0/dogen-0.95.0-Windows-AMD64.msi...Error uploading artifact to BinTray (401 status): This resource requires authentication
 
 *** STARTED Add upsilon support                                       :story:
+    CLOCK: [2017-01-12 Thu 22:00]--[2017-01-12 Thu 22:49] =>  0:49
     CLOCK: [2017-01-12 Thu 21:16]--[2017-01-12 Thu 21:59] =>  0:43
     CLOCK: [2017-01-12 Thu 20:43]--[2017-01-12 Thu 21:15] =>  0:32
     CLOCK: [2017-01-12 Thu 20:20]--[2017-01-12 Thu 20:42] =>  0:22
