--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,36 +12,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-13 Fri 10:54]
+#+CAPTION: Clock summary at [2017-01-13 Fri 12:10]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *72:51* |       |       | 100.0 |
+| *Total time*                                                                | *74:06* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 72:51   |       |       | 100.0 |
-| Active                                                                      |         | 72:51 |       | 100.0 |
+| Stories                                                                     | 74:06   |       |       | 100.0 |
+| Active                                                                      |         | 74:06 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:35 |   0.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:57 |   1.3 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.7 |
-| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  11.9 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.6 |
+| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  11.7 |
 | COMPLETED Fix borked windows build                                          |         |       |  0:26 |   0.6 |
 | COMPLETED Clean up enumerator implementation                                |         |       |  1:05 |   1.5 |
-| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   9.1 |
-| COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   4.0 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       |  3:15 |   4.5 |
-| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   8.0 |
-| COMPLETED Understand the behaviour of helpers and assistants                |         |       |  1:13 |   1.7 |
+| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   9.0 |
+| COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   3.9 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       |  3:15 |   4.4 |
+| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   7.8 |
+| COMPLETED Understand the behaviour of helpers and assistants                |         |       |  1:13 |   1.6 |
 | CANCELLED Add support for generic parents in yarn                           |         |       |  0:35 |   0.8 |
 | COMPLETED Fix assorted windows warnings                                     |         |       |  0:19 |   0.4 |
-| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |  10.3 |
+| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |  10.2 |
 | COMPLETED Fix borked windows build                                          |         |       |  1:54 |   2.6 |
-| COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.8 |
+| COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.7 |
 | COMPLETED Add validation around instatitation of abstract classes           |         |       |  2:25 |   3.3 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       |  0:21 |   0.5 |
-| COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   3.3 |
-| STARTED Add upsilon support                                                 |         |       | 11:41 |  16.0 |
+| COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   3.2 |
+| STARTED Add upsilon support                                                 |         |       | 12:56 |  17.5 |
 | STARTED Add auxiliary function properties to c#                             |         |       |  1:11 |   1.6 |
-| STARTED Add internal object dumper resolution                               |         |       |  4:51 |   6.7 |
+| STARTED Add internal object dumper resolution                               |         |       |  4:51 |   6.5 |
 | STARTED Add support for generic container types to C#                       |         |       |  1:16 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -933,6 +933,7 @@ Notes:
 : https://git.gnome.org/browse/dia/refs/
 
 *** STARTED Add upsilon support                                       :story:
+    CLOCK: [2017-01-13 Fri 10:55]--[2017-01-13 Fri 12:10] =>  1:15
     CLOCK: [2017-01-13 Fri 10:12]--[2017-01-13 Fri 10:54] =>  0:42
     CLOCK: [2017-01-13 Fri 09:01]--[2017-01-13 Fri 10:11] =>  1:10
     CLOCK: [2017-01-12 Thu 22:50]--[2017-01-12 Thu 23:28] =>  0:38
