--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,37 +12,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-13 Fri 14:16]
+#+CAPTION: Clock summary at [2017-01-13 Fri 15:45]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *74:53* |       |       | 100.0 |
+| *Total time*                                                                | *76:21* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 74:53   |       |       | 100.0 |
-| Active                                                                      |         | 74:53 |       | 100.0 |
+| Stories                                                                     | 76:21   |       |       | 100.0 |
+| Active                                                                      |         | 76:21 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:35 |   0.8 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:57 |   1.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:57 |   1.2 |
 | COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.5 |
-| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  11.6 |
+| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  11.4 |
 | COMPLETED Fix borked windows build                                          |         |       |  0:26 |   0.6 |
 | COMPLETED Clean up enumerator implementation                                |         |       |  1:05 |   1.4 |
-| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   8.9 |
-| COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   3.9 |
+| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   8.7 |
+| COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   3.8 |
 | COMPLETED Analysis for changes required in order to support containers      |         |       |  3:15 |   4.3 |
-| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   7.7 |
+| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   7.6 |
 | COMPLETED Understand the behaviour of helpers and assistants                |         |       |  1:13 |   1.6 |
 | CANCELLED Add support for generic parents in yarn                           |         |       |  0:35 |   0.8 |
 | COMPLETED Fix assorted windows warnings                                     |         |       |  0:19 |   0.4 |
-| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |  10.1 |
+| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |   9.9 |
 | COMPLETED Fix borked windows build                                          |         |       |  1:54 |   2.5 |
-| COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.6 |
+| COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.5 |
 | COMPLETED Add validation around instatitation of abstract classes           |         |       |  2:25 |   3.2 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       |  0:21 |   0.5 |
-| COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   3.2 |
-| COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  17.9 |
-| STARTED Create an upsilon yarn frontend                                     |         |       |  0:17 |   0.4 |
-| STARTED Add auxiliary function properties to c#                             |         |       |  1:11 |   1.6 |
-| STARTED Add internal object dumper resolution                               |         |       |  4:51 |   6.5 |
+| COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   3.1 |
+| COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  17.6 |
+| STARTED Create an upsilon yarn frontend                                     |         |       |  1:45 |   2.3 |
+| STARTED Add auxiliary function properties to c#                             |         |       |  1:11 |   1.5 |
+| STARTED Add internal object dumper resolution                               |         |       |  4:51 |   6.4 |
 | STARTED Add support for generic container types to C#                       |         |       |  1:16 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1001,6 +1001,7 @@ resulted in additional errors:
   appveyor.install.windows.ps1.
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-13 Fri 14:17]--[2017-01-13 Fri 15:45] =>  1:28
     CLOCK: [2017-01-13 Fri 12:28]--[2017-01-13 Fri 12:45] =>  0:17
 
 Now we can read upsilon models, we need to transform them into yarn
@@ -1027,6 +1028,9 @@ transformation. There are however a few corner cases:
   model I may want to choose a language. For Dogen/JSON frontends this
   is simply a meta-data extension. For upsilon we need to piggy-back
   on the existing language infrastructure.
+- registration with "composite" extensions is not working; boost path
+  only returns the last extension - e.g. =.xml= instead of
+  =.Configuration.xml=.
 
 Tasks:
 
