--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-14 Sat 16:47]
+#+CAPTION: Clock summary at [2017-01-14 Sat 16:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *78:20* |       |       | 100.0 |
+| *Total time*                                                                | *78:28* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 78:20   |       |       | 100.0 |
-| Active                                                                      |         | 78:20 |       | 100.0 |
+| Stories                                                                     | 78:28   |       |       | 100.0 |
+| Active                                                                      |         | 78:28 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:35 |   0.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:57 |   1.2 |
 | COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.3 |
-| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  11.1 |
+| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  11.0 |
 | COMPLETED Fix borked windows build                                          |         |       |  0:26 |   0.6 |
 | COMPLETED Clean up enumerator implementation                                |         |       |  1:05 |   1.4 |
 | COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   8.5 |
@@ -40,7 +40,7 @@
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       |  0:21 |   0.4 |
 | COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   3.0 |
 | COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  17.1 |
-| STARTED Create an upsilon yarn frontend                                     |         |       |  3:44 |   4.8 |
+| STARTED Create an upsilon yarn frontend                                     |         |       |  3:52 |   4.9 |
 | STARTED Add auxiliary function properties to c#                             |         |       |  1:11 |   1.5 |
 | STARTED Add internal object dumper resolution                               |         |       |  4:51 |   6.2 |
 | STARTED Add support for generic container types to C#                       |         |       |  1:16 |   1.6 |
@@ -1001,6 +1001,7 @@ resulted in additional errors:
   appveyor.install.windows.ps1.
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-14 Sat 16:45]--[2017-01-14 Sat 16:53] =>  0:08
     CLOCK: [2017-01-14 Sat 15:35]--[2017-01-14 Sat 16:44] =>  1:09
     CLOCK: [2017-01-13 Fri 18:19]--[2017-01-13 Fri 18:32] =>  0:13
     CLOCK: [2017-01-13 Fri 17:41]--[2017-01-13 Fri 18:18] =>  0:37
