--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,37 +12,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-14 Sat 16:53]
+#+CAPTION: Clock summary at [2017-01-14 Sat 17:43]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *78:28* |       |       | 100.0 |
+| *Total time*                                                                | *79:14* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 78:28   |       |       | 100.0 |
-| Active                                                                      |         | 78:28 |       | 100.0 |
+| Stories                                                                     | 79:14   |       |       | 100.0 |
+| Active                                                                      |         | 79:14 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:35 |   0.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:57 |   1.2 |
 | COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.3 |
-| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  11.0 |
-| COMPLETED Fix borked windows build                                          |         |       |  0:26 |   0.6 |
+| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  10.9 |
+| COMPLETED Fix borked windows build                                          |         |       |  0:26 |   0.5 |
 | COMPLETED Clean up enumerator implementation                                |         |       |  1:05 |   1.4 |
-| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   8.5 |
+| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   8.4 |
 | COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   3.7 |
 | COMPLETED Analysis for changes required in order to support containers      |         |       |  3:15 |   4.1 |
-| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   7.4 |
-| COMPLETED Understand the behaviour of helpers and assistants                |         |       |  1:13 |   1.6 |
+| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   7.3 |
+| COMPLETED Understand the behaviour of helpers and assistants                |         |       |  1:13 |   1.5 |
 | CANCELLED Add support for generic parents in yarn                           |         |       |  0:35 |   0.7 |
 | COMPLETED Fix assorted windows warnings                                     |         |       |  0:19 |   0.4 |
-| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |   9.6 |
+| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |   9.5 |
 | COMPLETED Fix borked windows build                                          |         |       |  1:54 |   2.4 |
 | COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.4 |
 | COMPLETED Add validation around instatitation of abstract classes           |         |       |  2:25 |   3.1 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       |  0:21 |   0.4 |
 | COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   3.0 |
-| COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  17.1 |
-| STARTED Create an upsilon yarn frontend                                     |         |       |  3:52 |   4.9 |
+| COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  17.0 |
+| STARTED Create an upsilon yarn frontend                                     |         |       |  4:38 |   5.8 |
 | STARTED Add auxiliary function properties to c#                             |         |       |  1:11 |   1.5 |
-| STARTED Add internal object dumper resolution                               |         |       |  4:51 |   6.2 |
+| STARTED Add internal object dumper resolution                               |         |       |  4:51 |   6.1 |
 | STARTED Add support for generic container types to C#                       |         |       |  1:16 |   1.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1001,6 +1001,9 @@ resulted in additional errors:
   appveyor.install.windows.ps1.
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-14 Sat 17:31]--[2017-01-14 Sat 17:42] =>  0:11
+    CLOCK: [2017-01-14 Sat 17:09]--[2017-01-14 Sat 17:30] =>  0:21
+    CLOCK: [2017-01-14 Sat 16:54]--[2017-01-14 Sat 17:08] =>  0:14
     CLOCK: [2017-01-14 Sat 16:45]--[2017-01-14 Sat 16:53] =>  0:08
     CLOCK: [2017-01-14 Sat 15:35]--[2017-01-14 Sat 16:44] =>  1:09
     CLOCK: [2017-01-13 Fri 18:19]--[2017-01-13 Fri 18:32] =>  0:13
